--- a/Project/FBI_analysis_datacleaning_vijaypulavarthi.ipynb
+++ b/Project/FBI_analysis_datacleaning_vijaypulavarthi.ipynb
@@ -39,7 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"FBI_dataset.csv\")"
+    "df = pd.read_csv(\"FBI_dataset.csv\")\n",
+    "print(\"hi\")"
    ]
   },
   {
